fixed contrast issue for visited links in the nav

--- a/styles/base.css
+++ b/styles/base.css
@@ -34,6 +34,10 @@ nav a {
     text-decoration: none;
 } 
 
+nav a:visited {
+    color: #FFF;
+}
+
 a {
     color: #0077cc;
 }
